--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "neo4j": "^2.0.0-RC2",
+    "neo4j-driver": "^4.0.1",
     "pug": "2.0.0-beta11"
   }
 }
