--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^4.0.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "uuid4": "^1.1.4"
   }
 }
