--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3'
 services:
+  neo4j:
+    image: neo4j:3.5
+    ports:
+    - 7474:7474
+    - 7687:7687
+    volumes:
+    - ${PWD}/neo4j/data:/data
+    environment: 
+      NEO4J_AUTH: neo4j/admin
+      
   db:
     image: mongo
     environment:
