--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^4.0.1",
