--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
-    "dotenv": "latest",
+    "dotenv": "^6.0.0",
     "mdbreact": "^4.25.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -20,7 +20,9 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "@azure/storage-blob": "^12.0.0",
+    "@types/dotenv": "^4.0.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
