--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "moment": "latest"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
